--- a/Makefile.zipit
+++ b/Makefile.zipit
@@ -3,7 +3,7 @@ CFLAGS = -O2 -g -DGP2X -DZIPIT_Z2 -DZIPIT_Z2_UTF8
 SDLCONFIG = sdl-config
 CURLCONFIG = curl-config
 XMLCONFIG = xml2-config
-LIBS = -lSDL_image -lSDL_gfx -lSDL_ttf -lpng -ljpeg -lcurl -lfreetype
+LIBS = -lSDL_image -lSDL_gfx -lSDL_ttf -lpng -ljpeg -lcurl -lfreetype -lm
 
 pspmaps: pspmaps.c $(ICON) global.o kml.o tile.c io.c cJSON.c
 	$(CC) $(CFLAGS) -o pspmaps$(EXT) pspmaps.c $(ICON) global.o kml.o cJSON.o $(LIBS) `$(CURLCONFIG) --cflags --libs` `$(SDLCONFIG) --cflags --libs` `$(XMLCONFIG) --libs`
