--- a/Makefile.zipit
+++ b/Makefile.zipit
@@ -5,14 +5,14 @@ CURLCONFIG = curl-config
 XMLCONFIG = xml2-config
 LIBS = -lSDL_image -lSDL_gfx -lSDL_ttf -lpng -ljpeg -lcurl -lfreetype -lm
 
-pspmaps: pspmaps.c $(ICON) global.o kml.o tile.c io.c cJSON.c
-	$(CC) $(CFLAGS) -o pspmaps$(EXT) pspmaps.c $(ICON) global.o kml.o cJSON.o $(LIBS) `$(CURLCONFIG) --cflags --libs` `$(SDLCONFIG) --cflags --libs` `$(XMLCONFIG) --libs`
+pspmaps: pspmaps.c $(ICON) global.o kml.o tile.c io.c cJSON.o
+	$(CC) $(CFLAGS) -o pspmaps$(EXT) pspmaps.c $(ICON) global.o kml.o cJSON.o $(LIBS) `$(CURLCONFIG) --cflags --libs` `$(SDLCONFIG) --cflags --libs`
 
 global.o: global.c global.h
 	$(CC) $(CFLAGS) -c global.c
 
 kml.o: kml.c kml.h
-	$(CC) $(CFLAGS) -c kml.c `$(SDLCONFIG) --cflags` `$(XMLCONFIG) --cflags`
+	$(CC) $(CFLAGS) -c kml.c `$(SDLCONFIG) --cflags`
 
 cJSON.o: cJSON.c cJSON.h
 	$(CC) $(CFLAGS) -c cJSON.c
