--- a/Makefile.zipit
+++ b/Makefile.zipit
@@ -1,12 +1,12 @@
 #CFLAGS = -O2 -g
-CFLAGS = -O2 -g -DGP2X -DZIPIT_Z2 -DZIPIT_Z2_UTF8
-SDLCONFIG = sdl-config
-CURLCONFIG = curl-config
-XMLCONFIG = xml2-config
+CFLAGS += -O2 -g -DGP2X -DZIPIT_Z2 -DZIPIT_Z2_UTF8
+SDLCONFIG ?= sdl-config
+CURLCONFIG ?= curl-config
+LDFLAGS ?=
 LIBS = -lSDL_image -lSDL_gfx -lSDL_ttf -lpng -ljpeg -lcurl -lfreetype -lm
 
 pspmaps: pspmaps.c $(ICON) global.o kml.o tile.c io.c cJSON.o
-	$(CC) $(CFLAGS) -o pspmaps$(EXT) pspmaps.c $(ICON) global.o kml.o cJSON.o $(LIBS) `$(CURLCONFIG) --cflags --libs` `$(SDLCONFIG) --cflags --libs`
+	$(CC) $(CFLAGS) -o pspmaps$(EXT) pspmaps.c $(ICON) global.o kml.o cJSON.o $(LIBS) `$(CURLCONFIG) --cflags --libs` `$(SDLCONFIG) --cflags --libs` $(LDFLAGS)
 
 global.o: global.c global.h
 	$(CC) $(CFLAGS) -c global.c
