Added support for serial gps on ttyS1 for zipit Z2 expansion port on iz2s and openwrt.

--- a/Makefile.zipit
+++ b/Makefile.zipit
@@ -2,18 +2,20 @@
 CFLAGS += -O2 -g -DGP2X -DZIPIT_Z2 -DZIPIT_Z2_UTF8
 SDLCONFIG ?= sdl-config
 CURLCONFIG ?= curl-config
-XML2CONFIG ?= xml2-config
+#XML2CONFIG ?= xml2-config
+XML2CONFIG ?= pkg-config
 LDFLAGS ?=
-LIBS = -lSDL_image -lSDL_gfx -lSDL_ttf -lSDL_rtf -lpng -ljpeg -lcurl -lfreetype -lm
+#LIBS = -lSDL_image -lSDL_gfx -lSDL_ttf -lSDL_rtf -lpng -ljpeg -lcurl -lfreetype -lm
+LIBS = ./libSDL_rtf.a -lSDL_image -lSDL_gfx -lSDL_ttf -lpng -ljpeg -lcurl -lfreetype -lm
 
-pspmaps: pspmaps.c $(ICON) global.o kml.o tile.c io.c gmapjson.o cJSON.o showrtf.o
-	$(CC) $(CFLAGS) -o pspmaps$(EXT) pspmaps.c $(ICON) global.o kml.o gmapjson.o showrtf.o cJSON.o $(LIBS) `$(CURLCONFIG) --cflags --libs` `$(SDLCONFIG) --cflags --libs` `$(XML2CONFIG) --libs` $(LDFLAGS) 
+pspmaps: pspmaps.c $(ICON) global.o kml.o tile.c io.c gmapjson.o cJSON.o showrtf.o gpsplugin.o minmea.o
+	$(CC) $(CFLAGS) -o pspmaps$(EXT) pspmaps.c $(ICON) global.o kml.o gmapjson.o showrtf.o cJSON.o gpsplugin.o minmea.o $(LIBS) `$(CURLCONFIG) --cflags --libs` `$(SDLCONFIG) --cflags --libs` `$(XML2CONFIG) --libs libxml-2` $(LDFLAGS) 
 
 global.o: global.c global.h
 	$(CC) $(CFLAGS) -c global.c
 
 kml.o: kml.c kml.h
-	$(CC) $(CFLAGS) -c kml.c `$(SDLCONFIG) --cflags` `$(XML2CONFIG) --cflags`
+	$(CC) $(CFLAGS) -c kml.c `$(SDLCONFIG) --cflags` `$(XML2CONFIG) --cflags libxml-2`
 
 gmapjson.o: gmapjson.c gmapjson.h
 	$(CC) $(CFLAGS) -c gmapjson.c `$(SDLCONFIG) --cflags`
@@ -23,6 +25,12 @@ showrtf.o: showrtf.c
 
 cJSON.o: cJSON.c cJSON.h
 	$(CC) $(CFLAGS) -c cJSON.c
+
+gpsplugin.o: gpsplugin.c
+	$(CC) $(CFLAGS) -c gpsplugin.c
+
+minmea.o: minmea.c
+	$(CC) $(CFLAGS) -c minmea.c
 
 icon.o: icon.rc
 	$(WINDRES) -i icon.rc -o icon.o
